add nomination form (material ui)

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,17 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: roboto,sans-serif;
 }
 
 .intro-container p {
     padding: 0 1em 0 1em;
+    text-align: center;
+}
+
+a {
+    color: fuchsia;
+    text-decoration: none;
 }
 
 .runner-container {
@@ -16,4 +22,21 @@ body {
 
 .runner {
     display: flex;
+    width: 20em;
+}
+
+#app-container {
+    text-align: left;
+}
+
+h1, h2 {
+    background-color: black;
+    text-align: center;
+    color: white;
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.contents-container {
+    padding: 1em;
 }
