restyle form, parse submit payload
* add pink highlights to form fields, submit button
* add parser to parse form payload
* extract parser and validations into `services` dir

--- a/src/components/SplashText.css
+++ b/src/components/SplashText.css
@@ -6,7 +6,7 @@ p {
 h1, h2 {
     background-color: black;
     text-align: center;
-    color: white;
+    color: white; /* #E040FB; */
     padding-top: 1em;
     padding-bottom: 1em;
 }
