--- a/src/components/SplashText.css
+++ b/src/components/SplashText.css
@@ -1,16 +1,17 @@
 p {
     padding: 0 1em 0 1em;
+    /* margin: 1em; */
     text-align: center;
 }
 
 h1, h2 {
     background-color: black;
     text-align: center;
-    color: white; /* #E040FB; */
-    padding-top: 1em;
-    padding-bottom: 1em;
+    color: white;
+    padding-top: .5em;
+    padding-bottom: .5em;
 }
 
 .splash-text-container {
-    margin: -3em 0 -3em 0;
+    margin: -2em 0 -2em 0;
 }
